[gd_scene load_steps=7 format=3 uid="uid://krlqmlpav40x"]

[ext_resource type="Script" path="res://Scenes/game_over.gd" id="1_bj6ps"]
[ext_resource type="Texture2D" uid="uid://bo0hwayhex4m" path="res://Res/menu frame.png" id="1_h16yx"]
[ext_resource type="FontFile" uid="uid://ckhk75yce8vfd" path="res://Res/aseprite-remix.ttf" id="2_ahesh"]
[ext_resource type="Texture2D" uid="uid://kamkb7111hi1" path="res://Res/button.png" id="3_fb7bd"]
[ext_resource type="Texture2D" uid="uid://c3tgj4rdfhopp" path="res://Res/button pressed.png" id="4_ek5ic"]
[ext_resource type="Texture2D" uid="uid://b38alfihgkekk" path="res://Res/button hover.png" id="5_qn283"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_bj6ps")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.509804)

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -286.0
offset_right = 375.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_h16yx")

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -191.0
offset_right = 87.0
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ahesh")
theme_override_font_sizes/font_size = 41
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -114.0
offset_right = 128.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("2_ahesh")
theme_override_font_sizes/font_size = 21
text = "Your score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreText" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -76.0
offset_right = 128.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("2_ahesh")
text = "1648745 pts"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -24.0
offset_right = 128.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("2_ahesh")
theme_override_font_sizes/font_size = 21
text = "Your nickname:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NickName" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 14.0
offset_right = 128.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("2_ahesh")
text = "%user_name%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitBtn" type="TextureButton" parent="TextureRect"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 135.0
offset_right = 75.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_fb7bd")
texture_pressed = ExtResource("4_ek5ic")
texture_hover = ExtResource("5_qn283")
stretch_mode = 6

[node name="Label" type="Label" parent="TextureRect/ExitBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("2_ahesh")
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartBtn" type="TextureButton" parent="TextureRect"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 81.0
offset_right = 75.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_fb7bd")
texture_pressed = ExtResource("4_ek5ic")
texture_hover = ExtResource("5_qn283")
stretch_mode = 6

[node name="Label" type="Label" parent="TextureRect/RestartBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("2_ahesh")
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TextureRect/ExitBtn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="TextureRect/RestartBtn" to="." method="_on_restart_btn_pressed"]
